[gd_scene load_steps=4 format=3 uid="uid://c5634a0dfaffs"]

[ext_resource type="Script" path="res://deprecated/机体/敌机/默认敌机.gd" id="1"]
[ext_resource type="PackedScene" path="res://deprecated/弹幕相关/发弹点/自机狙发弹点.tscn" id="2_ebdk7"]


[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(30, 30)

[node name="默认敌机" type="Area2D" groups=["enemy_flyer"]]
z_index = 1
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
pivot_offset = Vector2(20, 20)
color = Color(1, 0.12549, 0.290196, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="自机狙发弹点" parent="." instance=ExtResource("2_ebdk7")]
lock_aim_direction = true
enable = true
end_sec = 0.1
spawn_bullet_type = "方玉"
spawn_bullet_color = 5
spawn_bullet_frame = 40

[connection signal="area_entered" from="." to="." method="_on_EnemyFlyer_area_entered"]
[connection signal="hited" from="." to="." method="_on_hit"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
